--- a/config.json
+++ b/config.json
@@ -85,12 +85,12 @@
       "api": "https://zy.xmm.hk/api.php/provide/vod",
       "name": "小猫咪资源"
     }
-  }
-  "custom_category": {
+  },
+  "custom_category": [
     {
-      "name": "科幻",
+      "name": "伦理",
       "type": "movie",
-      "query": "科幻"
+      "query": "伦理"
     }
-  }
+  ]
 }
