--- a/config.json
+++ b/config.json
@@ -55,7 +55,7 @@
     },
     "mdzy": {
       "api": "https://www.mdzyapi.com/api.php/provide/vod",
-      "name": "魔都资源"
+      "name": "魔都资源",
       "detail": "https://moduzy2.com/list6/"
     },
     "zuid": {
