Remove 'modu' config and update entries
Removed 'modu' configuration and updated 'name' and 'query' fields for an entry.

--- a/config.json
+++ b/config.json
@@ -11,11 +11,6 @@
       "name": "黑木耳",
       "detail": "https://heimuer.tv"
     },
-    "modu":{
-      "api": "https://www.mdzyapi.com/api.php/provide/vod",
-      "name": "魔都资源",
-      "detail": "https://moduzy2.com/"
-    },
     "ruyi": {
       "api": "http://cj.rycjapi.com/api.php/provide/vod",
       "name": "如意资源"
@@ -99,9 +94,9 @@
       "query": "伦理"
     },
     {
-      "name": "里番动漫",
+      "name": "哈利波特",
       "type": "tv",
-      "query": "里番动漫"
+      "query": "哈利波特"
     }
   ]
 }
